--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,16 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Socket.io chat app backend",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests yet\" && exit 0"
   },
   "keywords": [],
-  "author": "",
+  "author": "Felix Atoma",
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
