--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_API_BASE_URL=https://socketio-chat-xjhl.onrender.com/api
-VITE_SOCKET_BASE_URL=https://socketio-chat-xjhl.onrender.com
+VITE_SOCKET_URL=https://socketio-chat-xjhl.onrender.com
